feat: added GeneratedWrecksPanel